tests/compile-fail/integration__integration__general__uninitialized_const.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: uninitialized const var
   ┌─ <input>:26:26
   │
26 │         const int y = 3, z, w = 4;
   │                          ^ needs a value


